--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="{{ url_for('static', filename='img/unnamed.jpg') }}">>
+    <link rel="icon" href="{{ url_for('static', filename='img/unnamed.jpg') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <title>Enock Walasi</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
@@ -28,7 +29,7 @@
                 <a href="#education">Education</a>
                 <a href="#mission">Mission</a>
                 <a href="#skills">Skills</a>
-                <a href="#philosophies">Philosophies</a>
+                <a href="#philosophy">Life Hacks</a>
                 <a href="#contact" class="contact-btn">Contact</a>
                 <button class="theme-toggle">🌓</button>
             </div>
@@ -39,5 +40,6 @@
     <!-- Add this before closing body tag -->
     <script src="{{ url_for('static', filename='js/titles.js') }}"></script>
     <script src="{{ url_for('static', filename='js/theme.js') }}"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
