Fixed the Hero Img

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 <section id="/" class="hero">
     <div class="hero-container">
         <div class="hero-image">
-            <img src="{{ url_for('static', filename='img/Img_5408.png') }}" alt="Enock Walasi">
+            <img src="{{ url_for('static', filename='img/IMG_5408.png') }}" alt="Enock Walasi">
         </div>
 
         <div class="hero-content">
